Fix article heading anchor spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17504,7 +17504,7 @@ p {
   position: absolute;
   display: none;
   bottom: 0.15rem;
-  left: -0.3rem;
+  left: -0.5rem;
 }
 
 .link--anchor:before {
